--- a/index.html
+++ b/index.html
@@ -93,73 +93,41 @@
       margin: 10px 0;
     }
 
-    /* Remove bullets from the list */
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    li {
-      list-style-type: none;
-    }
-
-    /* Gallery styles */
+    /* Additional styles for second section */
     .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      max-width: 900px;
+      margin: 20px auto;
     }
 
     .gallery img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    /* Worm animation */
-    .worm-container {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
       width: 100%;
-      height: 100%;
-    }
-
-    .worm {
-      width: 20px;
-      height: 60px;
-      background-color: #00ff00;
       border-radius: 50%;
-      animation: wiggle 1.5s ease-in-out infinite;
+      border: 6px dashed #ff69b4;
+      transition: filter 0.3s ease;
+      animation: idleWiggle 4s ease-in-out infinite;
     }
 
-    .worm:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-
-    .worm:nth-child(3) {
-      animation-delay: 0.4s;
+    .gallery img:hover {
+      animation: wiggle 0.5s infinite;
+      filter: brightness(110%);
+      border-color: #34a853;
     }
 
     @keyframes wiggle {
-      0% {
-        transform: rotate(0deg);
-      }
-      25% {
-        transform: rotate(10deg);
-      }
-      50% {
-        transform: rotate(0deg);
-      }
-      75% {
-        transform: rotate(-10deg);
-      }
-      100% {
-        transform: rotate(0deg);
-      }
+      0% { transform: rotate(0deg); }
+      25% { transform: rotate(2deg); }
+      50% { transform: rotate(-2deg); }
+      75% { transform: rotate(2deg); }
+      100% { transform: rotate(0deg); }
+    }
+
+    @keyframes idleWiggle {
+      0% { transform: rotate(0deg); }
+      50% { transform: rotate(1deg); }
+      100% { transform: rotate(0deg); }
     }
   </style>
 </head>
@@ -203,8 +171,10 @@
     <button class="bubble-button" onclick="window.open('https://youtu.be/hm9olv4tJFk?si=WPrbi76-GaopmKGN')">Learn More Fun Facts!</button>
   </div>
 
+  <!-- Gallery Section -->
+  <h1>My Facebook Worms Gallery</h1>
   <div class="gallery">
-    <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/351110294_151773644553924_2882956576233497617_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeER-HqGHLKNIg4zAwfpquMRe6CF5txBrPJ7oIXm3EGs8l0Udixf1-ic21e2gpgn1P52UpRfHlqFcxUfP-CgAA0Z&_nc_ohc=xFqRsSnuA-YQ7kNvwEY8ZzD&_nc_oc=Adk7gvaXU8GSO2NCwxna0d9Y5vVgwnLzW4ewPNu5XL8WpgFqPLh40BJwQJ43XksD2KQ&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=by-yIF_0P_auoDa8lKgt1Q&oh=00_AfH2iA3jDS8-baUJitpd_W6IGWMCJaVJPyFMtTd-oYRxuQ&oe=67FAE7DC" alt="Photo 1">
+   <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/351110294_151773644553924_2882956576233497617_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeER-HqGHLKNIg4zAwfpquMRe6CF5txBrPJ7oIXm3EGs8l0Udixf1-ic21e2gpgn1P52UpRfHlqFcxUfP-CgAA0Z&_nc_ohc=xFqRsSnuA-YQ7kNvwEY8ZzD&_nc_oc=Adk7gvaXU8GSO2NCwxna0d9Y5vVgwnLzW4ewPNu5XL8WpgFqPLh40BJwQJ43XksD2KQ&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=by-yIF_0P_auoDa8lKgt1Q&oh=00_AfH2iA3jDS8-baUJitpd_W6IGWMCJaVJPyFMtTd-oYRxuQ&oe=67FAE7DC" alt="Photo 1">
     <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/440888250_1360133541287868_6539841880054035921_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=101&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeGSbdxw8DWCGWSujut7cO18wlhaj0XXUF3CWFqPRddQXa8Ll-7TsBat_3YX8DH-tjTZCPMzyTNfXgO50IyovDGZ&_nc_ohc=F7pA7hcQfsIQ7kNvwHXyTjo&_nc_oc=AdluFQkmjv_cHD5CnHCtRxEYScplc9wo4ZW0QqbPG4F52HUxpphw7OzmoYMvNtGcXMw&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=W1dzV4YUl1ySrDVW2xdrWg&oh=00_AfGmsARpvf5cAE2vtcDqKaJuLyS1gCRg_YQK_Ap7kkTSSA&oe=67FAED60" alt="Photo 2">
     <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/480551855_1377614043258590_5918598905875331686_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeH4FL6CvTtw34dr74HNVxjsAAPppiQZJfoAA-mmJBkl-nEGqWdCRvh1jC-VYFbSFe1L9ym2oDgARJG9j_7cWUYZ&_nc_ohc=0mUhKd74tygQ7kNvwHcizFu&_nc_oc=AdlY61w795djwTkRI0sez1BUCImwV4VfkTMRrYCfvGjSzEQBKfGeyIGDBmfZw8XhPlM&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=jX50c60V-hr4bKH9dB_8hg&oh=00_AfFr-8epyXdLbiE7c6UCGtm4A7tG74RE951CJSeFJB1AXA&oe=67FAC415" alt="Photo 3">
     <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/463756894_2023917731413313_1792943121200712030_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=101&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeHM0oaJJPGgnp1b1HiF_X9sDfuw8Y5rMrEN-7DxjmsysTXL0vK4Mu8ecLM8nhOoMlZ7qC_SuDf2ngWMzFm9jrP8&_nc_ohc=gouCn6qVfPcQ7kNvwH_4_BR&_nc_oc=AdlPOzcFRRjxQ20hseGp-F7lbibiccH2m1C4eUZOPXYqHe7_1t-aj5RucgtvkAH85IU&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=MO3hgb80lF4boaynsq8IHg&oh=00_AfGXgxNxP0GBrf20VcfwBs5uL7K7OPykUe2zb48-jWSNvw&oe=67FACF14" alt="Photo 4">
@@ -215,8 +185,5 @@
     <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/481254007_122196678242040704_5153695770089137358_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=108&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeGCFWxwaxRRRv_mhVL47212nhDY7E5Z3s2eENjsTlnezfjNQ4cX4-LaDILfs5la-BOr-8Llz86t8ykoBtuRITnw&_nc_ohc=lNLTwGEfsi4Q7kNvwF4YNdQ&_nc_oc=AdlfR8Nr8DozOvZClVAvG-Z4m9Qhbnw7ewZSjF_0785CXPyxKqw-c7U2t_IhtSRNI7c&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=AkPJd6BPcU_zCYpdLGwVDQ&oh=00_AfFes_CaGeFaWB0dfT_RIbqFhDUu8q2lZ6HZruHCZ0urqA&oe=67FAD4C6" alt="Photo 9">
   </div>
 
-  <footer class="footer">
-    Keep Learning About the Tiny Worms! 🐍
-  </footer>
-</body>
-</html>
+  <div class="footer">
+    Keep learning and stay curious—Roundworms might be tiny
