--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </div>
 
   <!-- Gallery Section -->
-  <h1>My Facebook Worms Gallery</h1>
+                      <h1>Introducing Group 4</h1>
   <div class="gallery">
    <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/351110294_151773644553924_2882956576233497617_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeER-HqGHLKNIg4zAwfpquMRe6CF5txBrPJ7oIXm3EGs8l0Udixf1-ic21e2gpgn1P52UpRfHlqFcxUfP-CgAA0Z&_nc_ohc=xFqRsSnuA-YQ7kNvwEY8ZzD&_nc_oc=Adk7gvaXU8GSO2NCwxna0d9Y5vVgwnLzW4ewPNu5XL8WpgFqPLh40BJwQJ43XksD2KQ&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=by-yIF_0P_auoDa8lKgt1Q&oh=00_AfH2iA3jDS8-baUJitpd_W6IGWMCJaVJPyFMtTd-oYRxuQ&oe=67FAE7DC" alt="Photo 1">
     <img src="https://scontent.fmnl16-1.fna.fbcdn.net/v/t39.30808-1/440888250_1360133541287868_6539841880054035921_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=101&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeGSbdxw8DWCGWSujut7cO18wlhaj0XXUF3CWFqPRddQXa8Ll-7TsBat_3YX8DH-tjTZCPMzyTNfXgO50IyovDGZ&_nc_ohc=F7pA7hcQfsIQ7kNvwHXyTjo&_nc_oc=AdluFQkmjv_cHD5CnHCtRxEYScplc9wo4ZW0QqbPG4F52HUxpphw7OzmoYMvNtGcXMw&_nc_zt=24&_nc_ht=scontent.fmnl16-1.fna&_nc_gid=W1dzV4YUl1ySrDVW2xdrWg&oh=00_AfGmsARpvf5cAE2vtcDqKaJuLyS1gCRg_YQK_Ap7kkTSSA&oe=67FAED60" alt="Photo 2">
